<resources>
    <string name="app_name">UdacityTourGuideAppProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_tourism">Tourism</string>
    <string name="menu_restaurants">Restaurants</string>
    <string name="menu_clubs">Clubs</string>
    <string name="menu_theaters">Theaters</string>
    <string name="menu_send">Send</string>
    <string name="text_home_welcome_egypt">Welcome\nto\nEgypt</string>
    <string name="location_image_view_content_description">Location Image Description</string>
    <string name="location_address">30 Street, Egypt</string>
    <string name="location_phone">+20120011xxxx</string>
    <string name="tourism_location_name1">Giza Necropolis</string>
    <string name="tourism_location_name2">Valley of the Kings</string>
    <string name="tourism_location_name3">Egyptian Museum</string>
    <string name="tourism_location_name4">Karnak</string>
    <string name="tourism_location_name5">Aswan High Dam</string>
    <string name="theater_location_name1">City Stars Cinema</string>
    <string name="theater_location_name2">Zamalek Cinema</string>
    <string name="theater_location_name3">VOX Cinemas Mall of Egypt</string>
    <string name="resturant_location_name1"><![CDATA[Spectra Restaurant &Cafe]]></string>
    <string name="resturant_location_name2">Restaurant Bahia</string>
    <string name="resturant_location_name3">Egyptian Restaurant Assiut</string>
    <string name="resturant_location_name4">Arabiata Restaurant</string>
    <string name="club_location_name1"><![CDATA[Elements Club & Lounge]]></string>
    <string name="club_location_name2">Papas Beach Club</string>
    <string name="club_location_name3">Duport Pool Club</string>
    <string name="club_location_name4">Echo club</string>
    <string name="club_location_name5">Nineteen Twenty Five</string>
</resources>
