<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:clubs="http://schemas.android.com/clubs"
    clubs:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_tourism"
            android:icon="@drawable/ic_menu_tourism"
            android:title="@string/menu_tourism" />
        <item
            android:id="@+id/nav_restaurants"
            android:icon="@drawable/ic_menu_restaurants"
            android:title="@string/menu_restaurants" />
        <item
            android:id="@+id/nav_clubs"
            android:icon="@drawable/ic_menu_clubs"
            android:title="@string/menu_clubs" />
        <item
            android:id="@+id/nav_theaters"
            android:icon="@drawable/ic_menu_theaters"
            android:title="@string/menu_theaters" />
    </group>

</menu>
